# fabric

./: .dockerignore  .env-example  .gitignore  .gitignore_backup  .python-version  0001-Updated-pattern-description-py-program-to-process-ne.patch  Alma.md  Brewfile  CHANGELOG.md  Dockerfile  ENV  Fabricer.json  Fabricer.json:Zone.Identifier  LICENSE  LICENSE.txt  NEW_README.md  NOTES.md  README.md  app.py  coverage.out  docker-compose.yml  extwis.json  fabfile.py  fabricwin.md  flake.nix  github-contributing.py  go.mod  go.sum  gomod2nix.toml  image 3.png:Zone.Identifier  main.go  model-store-core.ts  package-lock.json  pattern_tags_review.md  patternstudio.py  poetry.lock.bak  pyproject.toml  qualifier-implementation-plan.md  setup-aliases.sh  setup.py  (+7 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  feature.md  pull_request_template.md
Pattern_Descriptions/: README_Pattern_Descriptions_and_Tags_MGT.md  extract_patterns.py  pattern_descriptions.json  pattern_extracts.json
WEB INTERFACE MOD README FILES/: WEB V2 Install Guide.md  enhanced-pattern-selection-update.md  language-options.md  pattern-search-implementation.md  pr-1284-update.md  pr-1319_PDF_TO_MARKDOWN_README.md
Web Interface MOD Readme Files/: WEB V2 Install Guide.md  pr-1284-update.md
chat/: chat.go
cli/: README.md  cli.go  cli_test.go  example.yaml  flags.go  flags_test.go  output.go  output_test.go
client/: .zshrc  README.md  fabric  fabric.py  pyproject.toml  requirements.txt  utils.py
common/: attachment.go  configurable.go  configurable_test.go  domain.go  domain_test.go  file_manager.go  file_manager_test.go  groups_items.go  messages.go  oauth_storage_test.go  plugin.go  plugin_test.go  utils.go  vendor.go
completion/: fabric.fish
completions/: _fabric  fabric.bash  fabric.fish
context/: alma.md
converter/: html_readability.go
core/: chatter.go  chatter_test.go  defaults.go  fabric.go  fabric_test.go  html_parser.go  html_parser_test.go  models.go  models_test.go  patterns_loader.go  plugin_registry.go  plugin_registry_test.go  registry.go  registry_test.go  vendors.go  (+1 more)
db/: db.go  (+9 more)
server/: .env.example  fabric_api_keys.json  fabric_api_server.py  openai.key  pyproject.toml  requirements.txt  users.json
server/fabric_server/: __init__.py  fabric_api_server.py
server/fabric_web_interface/: fabric_web_server.py
server/fabric_web_interface/templates/: index.html
(+1220 files in other folders)
