[tool.poetry]
name = "fabric_server"
version = "0.1.0"
description = "Fabric server"
authors = [
    "Daniel Miessler <https://github.com/danielmiessler>",
    "Jonathan Dunn <https://github.com/xssdoctor>",
    "Scott Behrens <https://github.com/sbehrens>",
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
openai = "^1.12.0"
flask = "^3.0.2"
python-dotenv = "^1.0.1"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Turns this into a poetry install CLI command
[tool.poetry.scripts]
fabric-api = 'fabric_server:main'
fabric-webui = 'fabric_server:run_web_interface'
